syntax = "proto3";

package api.v1;

option go_package = "goods/api/v1/goods;v1";

service Goods {
  rpc CreateGoods (CreateGoodsRequest) returns (GoodsModel){
  }
  rpc UpdateGoods (UpdateGoodsRequest) returns (GoodsModel){
  }
  rpc DeleteGoods (DeleteGoodsRequest) returns (DeleteGoodsReply){
  }
  rpc GetGoods (GetGoodsRequest) returns (GoodsModel){
  }
  rpc ListGoods (ListGoodsRequest) returns (ListGoodsReply){
  }
}

message CreateGoodsRequest {
  string name = 1;
  double price = 2;
  int64 count = 3;
}

message UpdateGoodsRequest {
  string name = 1;
  double price = 2;
  int64 count = 3;
}

message DeleteGoodsRequest {
  int64 id = 1;
}

message DeleteGoodsReply {}

message GetGoodsRequest {
  int64 id = 1;
}

message GoodsModel {
  int64 id = 1;
  string name = 2;
  double price = 3;
  int64 count = 4;
}

message ListGoodsRequest {
  int64 page = 1;
  int64 size = 2;
}

message ListGoodsReply {
  repeated GoodsModel list = 1;
  int64 count = 2;
  int64 maxPage = 3;
}